--- a/templates/campaign_advertisement.html
+++ b/templates/campaign_advertisement.html
@@ -202,7 +202,7 @@
             <li><a href="/sponsor/dashboard">Home</a></li>
             <li><a href="/sponsor/new_campaign">Begin Campaign</a></li>
             <li><a href="/search">Search</a></li>
-            <li><a href="#profile">Sponsor Campaigns</a></li>
+            <li><a href="/sponsor/negotiation">Negotiate Requests</li>
             <li><a href="/logout">Log Out</a></li>
         </ul>
     </div>
