--- a/templates/base.html
+++ b/templates/base.html
@@ -3,67 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>Users</title>
-    <style>
-        .navbar{
-            color:#fff;
-            font-size: 20px;
-        }
-      .navi{
-
-            font-size: 60px;
-            flex :1;
-            font-family: Arial;
-            text-align: center;
-            line-height: 1.5;
-            color :	#5195bd;
-            background-color: transparent;
-            padding: 10px;
-        }
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background-color: #000;
-            color: #fff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh; /* Minimum height of the viewport */
-            user-select: none; /* Disable text selection */
-        }
-        .container {
-            display: flex;
-            justify-content: space-between;
-            width: 100%; /* Full width */
-            height: 100%; /* Full height of the viewport */
-        }
-        .card {
-            flex: 1; /* Each card takes 1/3 of the container width */
-            padding: 20px;
-            height: 100%;
-            border: transparent;
-            text-align: center;
-            transition: background-color 0.3s ease, color 0.3s ease;
-            background-color: transparent; /* Transparent background */
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            color: #fff; /* Default text color */
-        }
-        .card:hover {
-            background-color: 	#5195bd; /* Blue */
-            color: #000; /* Change text color to black on hover */
-        }
-        .btn{
-            font-size: 20px;
-            font-family:Arial, Helvetica, sans-serif;
-            color: #fff;
-            text-underline-offset: 20px;
-            background-color: transparent;
-        }
-    </style>
 </head>
 <body>
     <div class="row">
