--- a/templates/login_admin.html
+++ b/templates/login_admin.html
@@ -5,94 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background-color: #000;
-            color: #fff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh; /* Full height of the viewport */
-            user-select: none; /* Disable text selection */
-        }
-
-        nav {
-            position: absolute;
-            top: 0;
-            width: 100%;
-            white-space: nowrap;
-            text-align: center;
-            font-size: 60px;
-            font-family: Arial;
-            line-height: 1.5;
-            color: #5195bd;
-            padding: 10px;
-            background-color: transparent;
-        }
-
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border: transparent;
-            width: 100%;
-            height: 100%; /* Full height of the viewport */
-        }
-
-        .card {
-            flex: 1;
-            padding: 20px;
-            text-align: center;
-            transition: background-color 0.3s ease, color 0.3s ease;
-            background-color: transparent; /* Transparent background */
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            color: #fff;
-            max-width: 400px;
-            border: transparent;
-        }
-
-        .card:hover {
-            background-color: #121212;
-        }
-
-        .card:hover input {
-            color: #5195bd;
-        }
-
-        .card input {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            background: #000;
-            border: none;
-            border-bottom: 1px solid #fff;
-            color: #fff;
-            transition: background-color 0.3s ease, color 0.3s ease;
-        }
-
-        .card .buttons a {
-            display: block;
-            margin: 10px 0;
-            width: 100%;
-            padding: 10px;
-            color: #fff;  
-            text-decoration: none;
-            background: none;
-            border-radius: 10px;
-            transition: background 0.3s, color 0.3s;
-            text-decoration: none;
-        }
-
-        .card .buttons a:hover {
-            background-color: #5195bd;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='loginstyle.css') }}">
 </head>
 <body>
     <nav>INFLUENZE</nav>
