--- a/templates/influencer_dashboard.html
+++ b/templates/influencer_dashboard.html
@@ -93,9 +93,9 @@
         </section>
         <section id="profile">
             <h2>Profile</h2>
-            <p>User ID : {{user.user_id}}</p>
+            <p>User ID : {{user.id}}</p>
             <p>Influencer ID : {{user.influencer_id}}</p>
-            <p>Mail ID : {{user.user_mail}}</p>
+            <p>Mail ID : {{user.email}}</p>
             <p>Influencer Reach : {{influencer.influencer_reach}}</p>
             <p>Influencer Rating : {{influencer.influencer_rating}}</p>
         </section>
