--- a/templates/login_influencer.html
+++ b/templates/login_influencer.html
@@ -12,21 +12,32 @@
     <div class="container">
         <div class="card">
             <h2>Influencer</h2>
-            <form method="post" action="/influencerlogin">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+              {% if messages %}
+                <div class="alert alert-danger" style="background-color: transparent;border: 0cap;">
+                  {% for category, message in messages %}
+                    <p>{{ message }}</p>
+                  {% endfor %}
+                </div>
+              {% endif %}
+            {% endwith %}
+
+            <form method="post" action="{{ url_for('influencer_login') }}">
+              {{ form.hidden_tag() }}
+
               <div class="form-group">
-                <input type="text" class="form-control" id="name" name="user_name" placeholder="Enter your name">
+                {{ form.email(class="form-control", placeholder="Enter your email") }}
               </div>
+              
               <div class="form-group">
-                <input type="email" class="form-control" id="email" name="user_email" placeholder="Enter your email">
+                {{ form.password(class="form-control", placeholder="Enter your password") }}
               </div>
-              <div class="form-group">
-                <input type="password" class="form-control" id="password" name="user_password" placeholder="Enter your password">
+
+              <div class="buttons">
+                <button type="submit" onclick="showAlert()" class="btn btn-primary btn-block">Login</button>
+                <a href="/influencer_register">SIGN UP</a>
               </div>
-            <div class="buttons">
-              <button type="submit" class="btn btn-primary btn-block">Login</button>
-              <a href="/influencer_register">SIGN UP</a>
-            </div>
-            </form> 
+            </form>
         </div>
     </div>
     
